--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <section id="profile">
       <div class="section__pic-container">
         <img
-          src="./assets/my_image.jpg"
+          src="./assets/proff.png"
           alt="Nolitha profile picture"
           style="border-radius: 50px"
         />
@@ -97,7 +97,7 @@
       <div class="section-container">
         <div class="section__pic-container">
           <img
-            src="./assets/my_image.jpg"
+            src="./assets/profile_pic.png"
             alt="Profile picture"
             class="about-pic"
           />
@@ -296,7 +296,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/fingerprint.jpg"
+                src="./assets/fingerprint.png"
                 alt="Project 1"
                 class="project-img"
               />
@@ -317,13 +317,17 @@
               </button>
             </div>
             <br /><br />
-            <p>Fingerprint access scanner system</p>
+            <p>The Fingerprint Access Scanner System is a biometric
+               security solution designed to control and monitor access
+                to restricted areas using fingerprint authentication.
+                 It replaces traditional key or password-based systems with a more secure
+              , fast, and user-friendly method of identification.</p>
           </div>
 
-          <!-- <div class="details-container color-container">
+          <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-2.png"
+                src="./assets/storr.png"
                 alt="Project 2"
                 class="project-img"
               />
@@ -338,7 +342,7 @@
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://ecom-r26z.onrender.com/'"
               >
                 Live Demo
               </button>
@@ -353,7 +357,7 @@
           <div class="details-container color-container">
             <div class="article-container">
               <img
-                src="./assets/project-3.png"
+                src="./assets/projImage.png"
                 alt="Project 3"
                 class="project-img"
               />
@@ -362,18 +366,29 @@
             <div class="btn-container">
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://github.com/Nolitha5/DoctorsAppointmentBooking/'"
               >
                 Github
               </button>
               <button
                 class="btn btn-color-2 project-btn"
-                onclick="location.href='https://github.com/'"
+                onclick="location.href='https://dr-appointment-6316.vercel.app/'"
               >
                 Live Demo
+              </div>
               </button>
+              <br />
+              <br />
+              <p>
+                This web application allows patients to easily book,
+                 manage, and track their appointments with doctors online. 
+                 It’s designed to simplify the process for both patients and 
+                 healthcare providers by offering 
+                a centralized platform for scheduling and communication.
+              </p>
+
             </div>
-          </div> -->
+          </div> 
 
         </div>
       </div>
@@ -419,7 +434,7 @@
           </ul>
         </div>
       </nav>
-      <p>Copyright &#169; 2024 Nolitha Sibiya. All Rights Reserved.</p>
+      <p>Copyright &#169; 2024 Florah Nolitha Sibiya. All Rights Reserved.</p>
     </footer>
     <script src="script.js"></script>
   </body>
