--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
                 />
                 <div>
                   <h3>HTML</h3>
-                  <p>Intermediate</p>
+                  <p>Pro</p>
                 </div>
               </article>
               <article>
@@ -169,7 +169,7 @@
                 />
                 <div>
                   <h3>CSS</h3>
-                  <p>Intermediate</p>
+                  <p>Pro</p>
                 </div>
               </article>
 
@@ -181,7 +181,7 @@
                 />
                 <div>
                   <h3>JavaScript</h3>
-                  <p>Basic</p>
+                  <p>Advanced</p>
                 </div>
               </article>
               <article>
@@ -192,7 +192,7 @@
                 />
                 <div>
                   <h3>React.js</h3>
-                  <p>Basic</p>
+                  <p>Pro</p>
                 </div>
               </article>
               <article>
@@ -203,7 +203,7 @@
                 />
                 <div>
                   <h3>Bootstrap</h3>
-                  <p>Intermediate</p>
+                  <p>Advanced</p>
                 </div>
               </article>
             </div>
@@ -219,7 +219,7 @@
                 />
                 <div>
                   <h3>PostgreSQL</h3>
-                  <p>Basic</p>
+                  <p>Advanced</p>
                 </div>
               </article>
               <article>
@@ -230,7 +230,7 @@
                 />
                 <div>
                   <h3>Node JS</h3>
-                  <p>Basic</p>
+                  <p>Advanced</p>
                 </div>
               </article>
               <article>
@@ -241,7 +241,7 @@
                 />
                 <div>
                   <h3>Django</h3>
-                  <p>Intermediate</p>
+                  <p>Advanced</p>
                 </div>
               </article>
               <article>
@@ -252,7 +252,7 @@
                 />
                 <div>
                   <h3>Python</h3>
-                  <p>Intermediate</p>
+                  <p>Advanced</p>
                 </div>
               </article>
               <article>
@@ -263,7 +263,7 @@
                 />
                 <div>
                   <h3>C++</h3>
-                  <p>Intermediate</p>
+                  <p>Pro</p>
                 </div>
               </article>
               <article>
@@ -382,7 +382,7 @@
               <p>
                 This web application allows patients to easily book,
                  manage, and track their appointments with doctors online. 
-                 It’s designed to simplify the process for both patients and 
+                 It's designed to simplify the process for both patients and 
                  healthcare providers by offering 
                 a centralized platform for scheduling and communication.
               </p>
