--- a/index.html
+++ b/index.html
@@ -425,6 +425,42 @@
             </div>
   
 
+            <div class="experience-details-container">
+              <div class="about-containers">
+                <div class="details-container color-container">
+                  <div class="article-container">
+                    <img
+                      src="./assets/admin_log.jpg"
+                      alt="Project 5"
+                      class="project-img"
+                    />
+                  </div>
+                  <h2 class="experience-sub-title project-title">Project Five</h2>
+                  <div class="btn-container">
+                    <button
+                      class="btn btn-color-2 project-btn"
+                      onclick="location.href='https://github.com/Nolitha5/SmartTech-Web'"
+                    >
+                      Github
+                    </button>
+                    <button
+                      class="btn btn-color-2 project-btn"
+                      onclick="location.href='https://github.com/Nolitha5/SmartTech-Web'"
+                    >
+                      Live Demo
+                    </button>
+                  </div>
+                  <br /><br />
+                  <p>An AI-powered recruitment platform that streamlines the hiring process by 
+                    allowing employers to post jobs and manage applications, 
+                    while candidates can easily apply by uploading their CVs. 
+                    The built-in AI CV scanner automatically analyzes resumes using 
+                    natural language processing to match applicants with job requirements,
+                     helping employers identify the best candidates faster. 
+                     The platform features a user-friendly dashboard,
+                      real-time status updates, and secure file handling for a seamless 
+                      hiring experience.</p>
+                </div>
 
 
 
