--- a/index.html
+++ b/index.html
@@ -451,15 +451,14 @@
                     </button>
                   </div>
                   <br /><br />
-                  <p>An AI-powered recruitment platform that streamlines the hiring process by 
-                    allowing employers to post jobs and manage applications, 
-                    while candidates can easily apply by uploading their CVs. 
-                    The built-in AI CV scanner automatically analyzes resumes using 
-                    natural language processing to match applicants with job requirements,
-                     helping employers identify the best candidates faster. 
-                     The platform features a user-friendly dashboard,
-                      real-time status updates, and secure file handling for a seamless 
-                      hiring experience.</p>
+                  <p>CV Scanner & Job Portal – Three-Phase Project
+This is a three-phase development project. Phase 1 delivers a simple, 
+                    professional website for my automation company to establish our online presence.
+                    Phase 2 introduces an AI-powered job portal where employers can post jobs and candidates can apply online
+                    . Phase 3 integrates a smart CV scanner using natural language processing to automatically analyze
+                    resumes, match them with job requirements, and help employers identify the most suitable candidates
+                    quickly. The platform includes a user-friendly dashboard, secure file uploads, and real-time application
+                    tracking for a seamless hiring experience.</p>
                 </div>
 
 
