--- a/index.html
+++ b/index.html
@@ -462,6 +462,43 @@ This is a three-phase development project. Phase 1 delivers a simple,
                 </div>
 
 
+      
+
+            <div class="experience-details-container">
+              <div class="about-containers">
+                <div class="details-container color-container">
+                  <div class="article-container">
+                    <img
+                      src="./assets/admin_log.jpg"
+                      alt="Project 5"
+                      class="project-img"
+                    />
+                  </div>
+                  <h2 class="experience-sub-title project-title">Project Five</h2>
+                  <div class="btn-container">
+                    <button
+                      class="btn btn-color-2 project-btn"
+                      onclick="location.href='https://github.com/Nolitha5/SmartTech-Web'"
+                    >
+                      Github
+                    </button>
+                    <button
+                      class="btn btn-color-2 project-btn"
+                      onclick="location.href='https://github.com/Nolitha5/SmartTech-Web'"
+                    >
+                      Live Demo
+                    </button>
+                  </div>
+                  <br /><br />
+                  <p>CV Scanner & Job Portal – Three-Phase Project
+This is a three-phase development project. Phase 1 delivers a simple, 
+                    professional website for my automation company to establish our online presence.
+                    Phase 2 introduces an AI-powered job portal where employers can post jobs and candidates can apply online
+                    . Phase 3 integrates a smart CV scanner using natural language processing to automatically analyze
+                    resumes, match them with job requirements, and help employers identify the most suitable candidates
+                    quickly. The platform includes a user-friendly dashboard, secure file uploads, and real-time application
+                    tracking for a seamless hiring experience.</p>
+                </div>
 
 
 
