--- a/index.html
+++ b/index.html
@@ -469,7 +469,7 @@ This is a three-phase development project. Phase 1 delivers a simple,
                 <div class="details-container color-container">
                   <div class="article-container">
                     <img
-                      src="./assets/admin_log.jpg"
+                      src="./assets/bmipic.png"
                       alt="Project 5"
                       class="project-img"
                     />
@@ -490,14 +490,12 @@ This is a three-phase development project. Phase 1 delivers a simple,
                     </button>
                   </div>
                   <br /><br />
-                  <p>CV Scanner & Job Portal – Three-Phase Project
-This is a three-phase development project. Phase 1 delivers a simple, 
-                    professional website for my automation company to establish our online presence.
-                    Phase 2 introduces an AI-powered job portal where employers can post jobs and candidates can apply online
-                    . Phase 3 integrates a smart CV scanner using natural language processing to automatically analyze
-                    resumes, match them with job requirements, and help employers identify the most suitable candidates
-                    quickly. The platform includes a user-friendly dashboard, secure file uploads, and real-time application
-                    tracking for a seamless hiring experience.</p>
+                  <p>Smart Health Assistant (Agentic AI-Powered)
+                  The Smart Health Assistant is an AI-driven wellness tool that allows users to input their personal health information—such as
+                    age, height, weight, and lifestyle details—and automatically calculates their Body Mass Index (BMI).
+                    Using agentic AI, the system intelligently analyzes the results and provides personalized exercise recommendations
+                    tailored to the user’s fitness level and health category.
+                    The assistant acts autonomously, guiding users toward healthier habits with smart insights and actionable advice.</p>
                 </div>
 
 
