--- a/index.html
+++ b/index.html
@@ -470,21 +470,21 @@ This is a three-phase development project. Phase 1 delivers a simple,
                   <div class="article-container">
                     <img
                       src="./assets/bmipic.png"
-                      alt="Project 5"
+                      alt="Project 6"
                       class="project-img"
                     />
                   </div>
-                  <h2 class="experience-sub-title project-title">Project Five</h2>
+                  <h2 class="experience-sub-title project-title">Project Six</h2>
                   <div class="btn-container">
                     <button
                       class="btn btn-color-2 project-btn"
-                      onclick="location.href='https://github.com/Nolitha5/SmartTech-Web'"
+                      onclick="location.href='https://colab.research.google.com/drive/1ThZYO6gBBGuM-E4Tlc1vn4io_dF55zF-'"
                     >
                       Github
                     </button>
                     <button
                       class="btn btn-color-2 project-btn"
-                      onclick="location.href='https://github.com/Nolitha5/SmartTech-Web'"
+                      onclick="https://cee83a53b0c5b9b134.gradio.live/"
                     >
                       Live Demo
                     </button>
